# ai-factory-setup

./: .gitignore  README-CLI.md  README.md  calculator.py  calculator_test.py  design.mmd  pipeline_v2.py  pipeline_v3.py  pyproject.toml  requirements.txt  run-v1-pipeline.sh  session-ses_1b59.md  session_20260522_2115.md  spec.gherkin
.opencode/: agents.xml
.opencode/agent/: core-implementation-agent.md  documentation-agent.md  pass-0-design-agent.md  pass-1-contracts-agent.md  pass-2-test-generation-agent.md  pass-3-core-implementation-agent.md  pass-4-refactor-agent.md  pass-5-security-agent.md  pass-6-observability-agent.md  pass-7-documentation-agent.md  test-generation-agent.md
docs/: roadmap.md  roadmap.txt  version-plan.md
examples/basic-addition/: README.md  basic_addition.py  basic_addition_test.py  design.mmd
src/: pipeline_v3_1.py
src/agentic_tdd/: __init__.py  cli.py
